# ChangeLog for dev-perl/Moose
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.77 2011/04/23 06:37:32 tove Exp $

*Moose-2.0.100 (23 Apr 2011)

  23 Apr 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.100.ebuild:
  Version bump

  20 Apr 2011; Torsten Veller <tove@gentoo.org> Moose-2.0.0.ebuild:
  Use a weak block for dev-perl/Class-MOP

*Moose-2.0.0 (14 Apr 2011)

  14 Apr 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.0.ebuild:
  Version bump

  03 Apr 2011; Torsten Veller <tove@gentoo.org> -Moose-1.14.ebuild,
  -Moose-1.21.ebuild, -Moose-1.230.ebuild:
  Cleanup

*Moose-1.250.0 (02 Apr 2011)

  02 Apr 2011; Torsten Veller <tove@gentoo.org> +Moose-1.250.0.ebuild:
  Version bump

  27 Mar 2011; Torsten Veller <tove@gentoo.org> Moose-1.240.ebuild:
  Stable on x86 (#350853)

  11 Mar 2011; Markos Chandras <hwoarang@gentoo.org> Moose-1.240.ebuild:
  Stable on amd64 wrt bug #350853

*Moose-1.240 (23 Feb 2011)

  23 Feb 2011; Torsten Veller <tove@gentoo.org> +Moose-1.240.ebuild:
  Version bump

*Moose-1.230 (14 Feb 2011)

  14 Feb 2011; Torsten Veller <tove@gentoo.org> +Moose-1.230.ebuild:
  Version bump

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Moose-1.15.ebuild,
  -Moose-1.17.ebuild, -Moose-1.20.ebuild:
  Cleanup

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -Moose-1.15.ebuild,
  -Moose-1.17.ebuild, -Moose-1.20.ebuild:
  Cleanup

  13 Jan 2011; Brent Baude <ranger@gentoo.org> Moose-1.19.ebuild:
  Marking Moose-1.19 ~ppc for bug 343479

*Moose-1.21 (27 Nov 2010)

  27 Nov 2010; Torsten Veller <tove@gentoo.org> +Moose-1.21.ebuild:
  Version bump

*Moose-1.20 (22 Nov 2010)

  22 Nov 2010; Torsten Veller <tove@gentoo.org> +Moose-1.20.ebuild:
  Version bump

*Moose-1.19 (07 Nov 2010)

  07 Nov 2010; Torsten Veller <tove@gentoo.org> +Moose-1.19.ebuild:
  Version bump

*Moose-1.17 (20 Oct 2010)

  20 Oct 2010; Torsten Veller <tove@gentoo.org> +Moose-1.17.ebuild: