@@ -7,18 +7,20 @@ DIST Moose-1.24.tar.gz 470108 RMD160 1562e35f184d2ddb9478892654d71869b9bc9d1f SH
 DIST Moose-1.25.tar.gz 470300 RMD160 ae55d305a748f1c0a1bfe496093326ad19415b4f SHA1 47cc4b54846abef055ce8402fbaaaaae06942eda SHA256 f827070c0feae887d5c9b73f5b1c9121e7f407795a798421af1b6003e0d9d758
 DIST Moose-2.0000.tar.gz 656318 RMD160 371165ce499176cdc4f6db6c5623d01105c4680e SHA1 706d6c68275788238292ec885a9a6d8a86270570 SHA256 af094c1cf1088f86e7fa8dd110d9e7ba906af68abcc4d00450f2b445dd256b4b
 DIST Moose-2.0001.tar.gz 656972 RMD160 ea023a7abc91fcbdc7fe14113ec651a94aebc181 SHA1 04020560bb0709fe5b194c3250e3c2ec90ae89b7 SHA256 3817bf0655bf7ae1141211845c577faac9a22e01fe56b6920522202e2042aeee
+DIST Moose-2.0002.tar.gz 659134 RMD160 81ac9b42e2c1d8bbb29de1686769ddcb3f9decf0 SHA1 d9631ebc82541fdb6bb6bbb14d4521ab1b9cc8e8 SHA256 3cebae9c580a684bc257939633e18a7dc95f7ae4ba2348c7fadc6b3d535618d5
 EBUILD Moose-0.92.ebuild 840 RMD160 5eafc2924f7be208e121a7a024d63d20b44f301c SHA1 672c63a154d7b2a0c77f35b94dafa02b20264b27 SHA256 6d8dcf4f75a2c38c29ff59c035d4cddc49e7f9ed284ee7cef1993d22c15db45a
 EBUILD Moose-1.19.ebuild 960 RMD160 29b6010038e989599e7df3304c395f31d6974d48 SHA1 8dc68c94a13b5758bb2bbe2d669c26ad7ec54060 SHA256 292f8920217b148f91a645b3923c27686596adbced3387449d167df7b8761223
 EBUILD Moose-1.240.ebuild 951 RMD160 c8b72f7f0a45703b1b63de2cd477a67a38f73f6a SHA1 104a6efa65aab75de6974b2c1203fbf4f67445d7 SHA256 0833867fe712069853a47eaf27d3c9260dcc8f40648f0bc1a11a83c03fe12575
 EBUILD Moose-1.250.0.ebuild 955 RMD160 29fe03a8460406d99de46b0ec76303c245835912 SHA1 37aaa04b0b4deb40676977724bf61082a267e4bc SHA256 4b03df0ec7e23a430497e7def9308228406ad7fb310b3dd6ee12b513bb2a82bb
 EBUILD Moose-2.0.0.ebuild 2602 RMD160 58a1e3c88a2dea264ff3dfa3382f009483fb67e8 SHA1 c835362ef3151868eab7a72f230c79be630128c2 SHA256 2faac8ae723e09a069540072c0cc8d02da767ec7a40c26e1e5600017b9cfc405
 EBUILD Moose-2.0.100.ebuild 2613 RMD160 76ea62d2e2827c0813effa8f9dcc1794cadf057f SHA1 8e1d7663e2614dc4aa510172b8e5aade03b6f777 SHA256 db0b0937272ecc7401688d6139fc10e883b1871e5e5f3b263d5ae947578ff7a7
-MISC ChangeLog 9425 RMD160 8d98a77bdd339dcb75f2498cc1e96703d2953414 SHA1 9d381bb70f404534aaeb2591f33653c4141e890a SHA256 5f61ca404fd04c991d698e1d9efca2b1afc87c3b1601525ddea3b805e2146752
+EBUILD Moose-2.0.200.ebuild 2613 RMD160 92d99cbcc3f14a04be5c7320dd853d35df5fa2b3 SHA1 8ba81f882b53f3b98c108f12febdec04474645fa SHA256 cc627978d9d0d5e4c57128215f49453bbca619ec724a2a8cf362cb01ec040f53
+MISC ChangeLog 9542 RMD160 29236aa8bce57b44dfce81291eeb3bdd6b8f6813 SHA1 a2e7d9756a846f7228b814f3ab92b4f68f6c9220 SHA256 162b10f071c60a0986188367c238ad05317ba8a016758ff7b0cc1d7375ac4e0b
 MISC metadata.xml 231 RMD160 cd36da6d6b8157aff8c980776189008447b755af SHA1 6be08908cce253e3126b4439cd84a5da4ff068e8 SHA256 0c8ea32c7de9448b9c2853926c5c60f5578e40f4e72f0fe7291f06c897913962
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk2yc7EACgkQV3J2n04EauxkPACcCu3VxPpC552z0e4SkOSz+hYE
-3noAn0pMyyljxn60Fprh8DnUhHYx2pdG
-=RbtS
+iEYEAREIAAYFAk26qY8ACgkQV3J2n04EauxrJwCdFhUZvqYlmUYMWwSSixdP25k4
+dNYAoJD2Sgz62GzWxqKuy/aqGESsSkjX
+=RI6M
 -----END PGP SIGNATURE-----
