@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Moose
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.77 2011/04/23 06:37:32 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.78 2011/04/29 12:05:29 tove Exp $
+
+*Moose-2.0.200 (29 Apr 2011)
+
+  29 Apr 2011; Torsten Veller <tove@gentoo.org> +Moose-2.0.200.ebuild:
+  Version bump
 
 *Moose-2.0.100 (23 Apr 2011)
 
